--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,11 +3,14 @@
 <% @everyone_needs.each do |id|  %>
   <li>
     <% @spell = @spell_book.find { |h| h["id"] == id } %>
+    <img src="<%= @spell["icon"] %>">
     #<%= @spell["order"] %>
     <%= @spell["name"] %>
     <ul>
       <% @spell["sources"].each do |source| %>
-        <%= source["text"] %>
+        <li>
+          <%= source["text"] %>
+        </li>
       <% end %>
     </ul>
   </li>
