--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,8 @@
-<h1>Everyone needs:</h1>
+<%= @i = 1 %>
+<div class="accordion" id="spells-accordion">
+  <%= render 'spell_list_partial', spell_ids: @everyone_needs_ids, table_caption: "Everyone" %>
 
-<%= render 'spell_list_partial', spell_ids: @everyone_needs_ids %>
-
-<% @characters.each do |character| %>
-  <h2>
-    <%= character.name %> needs:
-  </h2>
-
-  <%= render 'spell_list_partial', spell_ids: character.needed_spell_ids %>
-<% end %>
+  <% @characters.each do |character| %>
+    <%= render 'spell_list_partial', spell_ids: character.needed_spell_ids, table_caption: character.name, character_avatar: character.avatar %>
+  <% end %>
+</div>
